<resources>
  <string name="app_name">Bench Press</string>

  <!-- Hello, Stranger -->
  <string name="hello_stranger_title">Hello, Stranger</string>
  <string name="name">Name</string>
  <string name="hello_stranger">Hello, Stranger</string>

  <!-- Counter -->
  <string name="counter_title">Counter</string>
  <string name="increment">Increment</string>
  <string name="decrement">Decrement</string>

  <!-- Login -->
  <string name="login_title">Login</string>
  <string name="login_header">Welcome Back</string>
  <string name="login_subheader">Please log in to your account</string>
  <string name="email">Email</string>
  <string name="password">Password</string>
  <string name="log_in">Log in</string>
  <string name="forgot_password">Forgot password?</string>

  <string name="image_picker_title">Image Picker</string>

  <!-- GitHub -->
  <string name="quiz_title">Quiz</string>
  <string name="github_title">GitHub</string>
  <string name="keyword">Keyword</string>
  <string name="clear">Clear</string>
  <string name="retry">Retry</string>
</resources>
