<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

  <android.support.constraint.Guideline
      android:id="@+id/guideline"
      android:layout_width="wrap_content"
      android:layout_height="0dp"
      android:orientation="horizontal"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintGuide_percent="0.4"
      app:layout_constraintTop_toTopOf="parent" />

  <android.support.design.widget.TextInputLayout
      android:id="@+id/emailTextInputLayout"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginBottom="8dp"
      app:layout_constraintBottom_toTopOf="@+id/guideline"
      app:layout_constraintEnd_toStartOf="@+id/endGuideline"
      app:layout_constraintStart_toStartOf="@+id/startGuideline">

    <android.support.design.widget.TextInputEditText
        android:id="@+id/emailEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:maxLines="1" />
  </android.support.design.widget.TextInputLayout>

  <android.support.constraint.Guideline
      android:id="@+id/startGuideline"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:orientation="vertical"
      app:layout_constraintGuide_begin="16dp" />

  <android.support.constraint.Guideline
      android:id="@+id/endGuideline"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:orientation="vertical"
      app:layout_constraintGuide_end="16dp" />

  <android.support.design.widget.TextInputLayout
      android:id="@+id/passwordTextInputLayout"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      app:layout_constraintEnd_toStartOf="@+id/endGuideline"
      app:layout_constraintStart_toStartOf="@+id/startGuideline"
      app:layout_constraintTop_toTopOf="@+id/guideline">

    <android.support.design.widget.TextInputEditText
        android:id="@+id/passwordEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:inputType="textPassword" />
  </android.support.design.widget.TextInputLayout>

  <TextView
      android:id="@+id/subheaderTextView"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginBottom="32dp"
      android:text="@string/login_subheader"
      app:layout_constraintBottom_toTopOf="@+id/emailTextInputLayout"
      app:layout_constraintStart_toStartOf="@+id/startGuideline" />

  <TextView
      android:id="@+id/headerTextView"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginBottom="8dp"
      android:text="@string/login_header"
      app:layout_constraintBottom_toTopOf="@+id/subheaderTextView"
      app:layout_constraintStart_toStartOf="@+id/startGuideline" />

  <Button
      android:id="@+id/loginButton"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginTop="16dp"
      android:text="@string/log_in"
      app:layout_constraintEnd_toStartOf="@+id/endGuideline"
      app:layout_constraintStart_toStartOf="@+id/startGuideline"
      app:layout_constraintTop_toBottomOf="@+id/passwordTextInputLayout" />

  <Button
      android:id="@+id/forgotPasswordButton"
      style="?android:attr/borderlessButtonStyle"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="8dp"
      android:text="@string/forgot_password"
      android:textAllCaps="false"
      app:layout_constraintEnd_toStartOf="@+id/endGuideline"
      app:layout_constraintStart_toStartOf="@+id/startGuideline"
      app:layout_constraintTop_toBottomOf="@+id/loginButton" />
</android.support.constraint.ConstraintLayout>
